# traps_sweeper

./: .gitignore  CMakeLists.txt  build_em++.bat  main.cpp  skell.html
cmake/: emscripten-toolchain.cmake
src/demo/trap_sweeper/: mine_sweeper.h
src/engine/environ/: emcc_async.h  emcc_wget.cpp  emcc_wget.h  loader.cpp
src/engine/environ/sdl/: main_loop.cpp  main_loop.h  window.cpp
src/engine/gui/: simple_renderables.h
src/engine/matrix/: mat4.cpp
src/engine/render/api/: draw.cpp  upload.cpp
src/engine/render/chunk/: attr_chunk.cpp  layout.h
src/engine/render/material/: shader_fac.cpp  shader_gen.cpp
src/engine/render/mesh/: single_mesh.cpp
src/engine/render/model/impl/: buffered_data_texture.h
src/engine/render/opengl/: error_handling.cpp  error_handling.h  gl_buffer.cpp  gl_context_info.cpp  gl_context_info.h  gl_enabled_attributes.cpp  gl_enabled_attributes.h  gl_shader.cpp  gl_texture.cpp
src/engine/render/text/: freetype_font.cpp  text_sprite.cpp
src/engine/utils/compile_time/: compile_time.h
src/ext/: math.h
